<resources>
    <string name="app_name">FSL Monitor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appname_string">FreeStyle Libre Monitor</string>
    <string name="version_string">Version 0.01</string>
    <string name="sensordetect_string">Sensor detected</string>
    <string name="monitoroff_string">Monitor Off</string>
    <string name="monitoron_string">Monitor On</string>
    <string name="title_activity_settings">Settings</string>
    <string name="savebutton_string">Save</string>
    <string name="cancelbutton_string">Cancel</string>
    <string name="sampleinterval_string">Sample Interval (mins)</string>
    <string name="runningavg_string">Running Avg (mins)</string>
    <string name="interstitialdelay_string">Interstitial to BG delay (mins)</string>
    <string name="currentbgalarm_string">Current BG alarm @ (mg/dl)</string>
    <string name="futurebgalarm_string">Future BG alarm @ (mg/dl)</string>
    <string name="futureprojection_string">Future projection delay (mins)</string>
    <string name="alarmlog_string">Monitoring not started.</string>
    <string name="initialsampleintervalvalue_string">5</string>
    <string name="initialrunningavgvalue_string">10</string>
    <string name="initialinterstitialdelayvalue_string">20</string>
    <string name="initialfutureprojectiondelayvalue_string">30</string>
    <string name="initialcurrentbgalarmvalue_string">80</string>
    <string name="initialfuturebgalarmvalue_string">120</string>
    <string name="resetbutton_string">Reset</string>
</resources>
